--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Josecj11/SOS2425-20-JCJ-sandbox#readme",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "express": "^4.21.2"
   }
 }
